--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,7 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+  width: 600px;
+  margin-top: 100px;
+  padding: 40px;
 }
 
 .App-header {
@@ -19,11 +16,9 @@
   font-size: 1.5em;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+@media (max-width: 650px) {
+  .App {
+    margin: 20px 20px 0;
+    width: auto;
+  }
 }
