stub out main app layout

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  width: 600px;
+  width: 800px;
   margin-top: 100px;
   padding: 40px;
 }
@@ -14,6 +14,18 @@
 
 .App-title {
   font-size: 1.5em;
+}
+
+.col-left {
+  background-color: #D3D3D3;
+}
+
+.col-right {
+  text-align: center;
+}
+
+.task-list {
+  padding-left: 20px;
 }
 
 @media (max-width: 650px) {
